@@ -38,6 +38,7 @@ Changes after 2.6.11:
     - Added support for saving text mode snapshot in BMP format.
     - Write marker to log file by pressing "m" button (guis with "cmdmode" on).
     - X11 keymaps: added new one for Swiss-German and improved Italian map.
+    - RFB / vncsrv: VGA features h/v pel panning and split screen now supported.
     - RFB: added support for the pixel format RGB332.
     - win32: added display library option "autoscale" to scale a small
       simulation window by factor 2, 4 or 8 depending in desktop window size.
